...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Destination Watchlist'),
      ),
      body: Container(
        child: Center(
          child: watchListItems.isEmpty
              ? Column(
                  mainAxisAlignment: MainAxisAlignment.center,
...

// (these data would be retrieved otherwise from Flights API which is not yet implemented)
// data of these items are passed to blocs in DestinationInfo page to fetch hotels, pois, geo info, ...
final watchListItems = <WatchListItemModel>[
  WatchListItemModel(
    'SFO',
    'San Francisco',
    Location(latitude: 37.773972, longitude: -122.431297),
  ),
  WatchListItemModel(
    'PAR',
    'Paris',
    Location(latitude: 48.864716, longitude: 2.349014),
...
