...
                // TODO
                onTap: () {},
              ),
            ],
          ),
          SettingsSection(
            title: 'Interface',
            tiles: [
              SettingsTile(
                leading: Icon(Icons.brightness_6),
                title: 'Theme',
                subtitle: 'Dark blue',
                // TODO
...
