...
  @override
  Widget build(BuildContext context) {
    final cityName = ModalRoute.of(context)!.settings.arguments as String;

    return Scaffold(
      appBar: AppBar(
        title: Text('Points of Interests'),
      ),
      body: Container(
        child: BlocBuilder<PoisCubit, PoisState>(
          builder: (_, state) {
            if (state is PoisLoading) {
              return PoiShimmerLoading();
...
